# rsbtc

./: .gitignore  Cargo.toml  LICENSE  README.md  block.cbor
lib/: Cargo.toml  mykey.priv.cbor  mykey.pub.pem
lib/src/: crypto.rs  error.rs  lib.rs  network.rs  sha256.rs  types.rs  util.rs
lib/src/types/: block.rs  blockchain.rs  transaction.rs
logs/: wallet.log.2026-01-19
miner/: Cargo.toml  alice.priv.cbor  alice.pub.pem
miner/src/: main.rs
node/: Cargo.toml  blockchain.cbor
node/src/: handler.rs  main.rs  util.rs
wallet/: Cargo.toml  wallet_config.toml
wallet/src/: core.rs  main.rs  tasks.rs  ui.rs  util.rs
