[package]
name = "wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
btclib = { path = "../lib" }
clap = { version = "4.5.54", features = ["derive"] }
crossbeam-skiplist = "0.1.3"
cursive = "0.21.1"
futures = "0.3.31"
kanal = "0.1.1"
serde = { version = "1.0.228", features = ["derive"] }
text-to-ascii-art = "0.1.10"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.11"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
